# selenium

./: .gitignore  API_DOCUMENTATION.md  LICENSE  README.md  crawler.py  plan.md  requirements.txt  setup.cfg  test.py
examples/: basic_usage.py
src/: __init__.py  api_server.py  config.py  crawler.py  data_processor.py  driver_manager.py  main.py  page_scraper.py  plugin_base.py  utils.py
src/plugins/api/: api_adapter.py
src/plugins/input/: ajax_plugin.py
src/plugins/parse/: news_parser.py
tests/: test_api_server.py  test_crawler.py
