[metadata]
name = web-crawler-plugins
version = 0.1.0
description = A plugin system for web crawling tasks

[options]
packages = find:
python_requires = >=3.8
install_requires =
    beautifulsoup4>=4.9.0
    requests>=2.25.0

[options.entry_points]
web_crawler.input_plugins =
    ajax_plugin = src.plugins.input.ajax_plugin:AjaxPlugin

web_crawler.parse_plugins =
    news_parser = src.plugins.parse.news_parser:NewsParser

web_crawler.api_plugins =
    api_adapter = src.plugins.api.api_adapter:ApiAdapterPlugin